# schematool

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
schema/: bad_conv.rdf
schema/purl/: test.ttl
schema/testjsonld/: test.jsonld  test.ttl
schema/testxml/: testxml.rdf  testxml.ttl
schematool/: __init__.py  schematool.py
tests/: test_docstrings_formatting.py  test_gen_ctags.py  test_gen_python.py  test_license_extraction.py  test_schematool.py
