[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "schematool"
version = "0.1.0"
description = "Sync external RDF schemas and update documentation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests",
    "requests-cache",
    "rdflib",
    "pyoxigraph",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "responses",
]

[project.scripts]
schematool = "schematool:main"

[tool.hatch.build.targets.wheel]
packages = ["schematool.py"]

[tool.pytest.ini_options]
addopts = "-v --cov=. --cov-report=term-missing"
testpaths = ["tests"]
