[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "schematool"
version = "0.1.0"
description = "Sync external RDF schemas and update documentation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.34.2",
    "requests-cache>=1.3.2",
    "rdflib>=7.6.0",
    "pyoxigraph>=0.5.9",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "responses",
]

[project.scripts]
schematool = "schematool:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["schematool*"]
namespaces = false

[tool.pytest.ini_options]
addopts = "-v --cov=. --cov-report=term-missing"
testpaths = ["tests"]
